--- a/src/packet_aprs.qmd
+++ b/src/packet_aprs.qmd
@@ -16,5 +16,4 @@ The packet station is located along the North wall of the shack near the HF ante
 
 The station and TNC are located in the cabinet near the back door of the shack.
 
-The [W3YA-1 digipeater](https://aprs.fi/#!mt=roadmap&z=13&call=a%2FW3YA-1&timerange=3600&tail=3600) operates on 144.390 MHz.
-
+The [W3YA-1 digipeater](https://aprs.fi/#!mt=roadmap&z=13&call=a%2FW3YA-1&timerange=3600&tail=3600) operates on 144.390 MHz. Here is [link](https://aprs.fi/info/a/W3YA-1) to data about the stations recently heard by W3YA-1, according to APRS.fi site.
