--- a/src/narc3.qmd
+++ b/src/narc3.qmd
@@ -29,7 +29,7 @@ It is located to the right of NARC-2, and immediately to the left of the [packet
 
 <!-- The full operating guide follows. It is a child document -->
 
-```{r, results='asis'}
+```{r, results='asis', echo=FALSE}
 a <- knitr::knit_child('IC-718.qmd', quiet=T)
 cat(a, sep="\n")
 ```
