Fix rendering problem with PDF output.

--- a/src/index.qmd
+++ b/src/index.qmd
@@ -20,3 +20,5 @@ This site provides information about how to gain access to the mountaintop stati
 The mountaintop station has been a focal point of activity for the club.
 We operated Field Day 2023 from the station, and we have held W3M special event operations, Pennsylvania QSO Party activities, and other contesting events.
 
+For a PDF version of this guide, click [here](NARC-Clubhouse-Guide.pdf).
+
