--- a/src/IC-7610.qmd
+++ b/src/IC-7610.qmd
@@ -4,7 +4,7 @@ title: "Icom IC-7610"
 
 ## IC-7610 operating guide
 
-![Icom IC-7610](include/img/ic-7610.jpg)
+![Icom IC-7610](include/img/ic-7610.jpg){#fig-ic-7610}
 
 This transceiver is currently connected to the NARC1 station computer.
 
@@ -45,7 +45,7 @@ As a result, the next set of actions may or may not be required.
 Choose the PL-259 connector with the <span color="yellow">yellow</span> IC-7610 tag.
 Plug the cable from the radio into the cable connector for one of the antennas, for example, one of the triband Yagis for 10-20 m.
 
-![Antenna connections](include/img/antenna-connections.jpeg)
+![Antenna connections](include/img/antenna-connections.jpeg){#fig-antenna-connection-panel}
 
 ::: {.callout-warning}
 
@@ -57,19 +57,19 @@ Plug the cable from the radio into the cable connector for one of the antennas, 
 
 4. Power up the Astron RS-35A power supply that powers the IC-7610/NARC1. The power supply is located to the right of the Elecraft KPA1500 amplifier.
 
-![Astron RS-35A power supply](include/img/astron-rs-35a.png)
+![Astron RS-35A power supply](include/img/astron-rs-35a.png){#fig-astron-rs-35a}
 
-5. Power up the IC-7610/NARC1 by pressing and briefly holding the power button.
+5. Power up the IC-7610/NARC1 by pressing and briefly holding the power button highlighted in @fig-ic-7610-power-switch.
 
-![IC-7610 power switch](include/img/ic-7610-power-switch.png)
+![IC-7610 power switch](include/img/ic-7610-power-switch.png){#fig-ic-7610-power-switch}
 
 6. Power up the Elecraft KPA1500 amplifier
 
-The IC-7610/NARC1 is connected to the Elecraft [KPA1500](KPA1500.qmd) amplifier. 
+The IC-7610/NARC1 is connected to the Elecraft [KPA1500](KPA1500.qmd){#fig-elecraft-kpa-1500} amplifier. 
 The power supply for the KPA1500 is under the desk on a small footstool. 
 Check that the KPA1500 power supply is on. 
 If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply.
-Power up the KPA1500 by pressing the `on` switch on the lower right hand side of the KPA1500 front panel.
+Power up the KPA1500 by pressing the `on` switch on the lower right hand side of the KPA1500 front panel as shown in @fig-kpa1500-power-switch.
 
 ::: {.callout-note}
 
@@ -77,7 +77,7 @@ If you are not operating with more than 100 W or do not need the KPA1500's built
 
 :::
 
-![KPA1500 Power Switch](include/img/kpa1500-power-switch.png)
+![KPA1500 Power Switch](include/img/kpa1500-power-switch.png){#fig-kpa1500-power-switch}
 
 #### Log-in to the computer
 
@@ -86,51 +86,52 @@ If you are not operating with more than 100 W or do not need the KPA1500's built
 2. Log-in using the appropriate password
 
 The IC-7610/NARC1 is connected via USB2 to the NARC1 PC.
-Open your logging program of choice. NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
+Open your logging program of choice. 
+NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
 
 To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. 
 See instructions for operating these modes in separate sections below.
 
 ### Basic controls
 
-- Audio levels for the two VFOs are controlled via separate knobs on the left side of the front panel.
+- Audio levels for the two VFOs are controlled via separate knobs on the left side of the front panel as shown in @fig-ic-7610-af.
 
-![IC-7610 audio gain controls](include/img/ic-7610-af.png)
+![IC-7610 audio gain controls](include/img/ic-7610-af.png){#fig-ic-7610-af}
 
-- You may switch operating bands in one of two ways:
+- As shown in @fig-ic-7610-chg-band You may switch operating bands in one of two ways:
     - Buttons located on the right side of the front panel
     - Pressing the frequency on the touch screen.
     
-![IC-7610 band change controls](include/img/ic-7610-chg-band.png)
+![IC-7610 band change controls](include/img/ic-7610-chg-band.png){#fig-ic-7610-chg-band}
 
 
-- Switch operating modes by pressing the mode button on the touch panel. 
+- Switch operating modes by pressing the mode button on the touch panel as shown in @fig-ic-7610-chg-mode. 
 
-![IC-7610 mode change control](include/img/ic-7610-chg-mode.png)
+![IC-7610 mode change control](include/img/ic-7610-chg-mode.png){#fig-ic-7610-chg-mode}
 
 This opens a window where you can choose the mode of operation.
     - Hit the arrow button to close the window and save your choice.
     
-- Turn digital noise reduction on or off by pressing the NR button on the left side of the front panel. 
+- Turn digital noise reduction on or off by pressing the NR button on the left side of the front panel highlighted in @fig-ic-7610-left-touch-buttons. 
 When NR is on, the NR button will be illuminated.
     - To adjust the amount of noise reduction, press and hold the NR button to open a window on the upper right corner of the touch panel display.
     - Turn the MULTI key to adjust the level of noise reduction.
     - Close the NR window by pressing the MULTI key or by pressing the NR button.
 - Adjust preamplifier (`P.AMP`) settings, automatic gain control (`AGC`), Intercept Point (`IP+`), `VOX`, and compression (`COMP`) settings by pressing the corresponding button on the left side of the touch/display screen.
 
-![IC-7610 left panel controls](include/img/ic-7610-left-touch-buttons.png)
+![IC-7610 left panel controls](include/img/ic-7610-left-touch-buttons.png){#fig-ic-7610-left-touch-buttons.png}
 
-- Adjust touch/display screen settings via the MENU1/MENU2 buttons at the bottom of the touch/display screen.
+- Adjust touch/display screen settings via the MENU1/MENU2 buttons at the bottom of the touch/display screen illustrated in @fig-ic-7610-menu-touch-buttons.
 
-![IC-7610 bottom menu touch screen buttons](include/img/ic-7610-menu-touch-buttons.png)
+![IC-7610 bottom menu touch screen buttons](include/img/ic-7610-menu-touch-buttons.png){#fig-ic-7610-menu-touch-buttons}
 
-- Select receive filter settings via the `FILTER` button on the right side of the front panel, below the `TWIN PBT` knob.
+- Select receive filter settings via the `FILTER` button on the right side of the front panel, below the `TWIN PBT` knob as highlighted in @ic-7610-filter.
 
-![IC-7610 filter control](include/img/ic-7610-filter.png)
+![IC-7610 filter control](include/img/ic-7610-filter.png){#ic-7610-filter}
 
-- Set RF power by pressing the MULTI button to open a window on the display/touch screen. Press the RF POWER panel to select it, and adjust the output power by turning the MULTI knob.
+- Set RF power by pressing the MULTI button to open a window on the display/touch screen. Press the RF POWER panel to select it, and adjust the output power by turning the MULTI knob as shown in @fig-ic-7610-multi.
 
-![IC-7610 multifunction control](include/img/ic-7610-multi.png)
+![IC-7610 multifunction control](include/img/ic-7610-multi.png){#fig-ic-7610-multi}
 
 ### Settings
 
@@ -174,20 +175,20 @@ NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
 
 :::
 
-#### Amateur Contact Log (N3FJP)
+#### Amateur Contact Log (ACL a.k.a. N3FJP)
 
 You may need to download the specific log for the contest you want to work.
 The club has paid N3FJP for a license under the W3YA callsign.
 Ask W3TM for information about the license codes for contests that are are not already installed.
 
-1. Open Amateur Contact Log (most recent version installed is 7.0.9)
+1. Open Amateur Contact Log
 2. Confirm that the program tracks frequency & mode.
 
 ### On the IC-7610
 
 1. Confirm the rig is in SSB mode.
 
-To change the mode, press the mode indicator on the touch screen to open a window to toggle the mode (USB/LSB).
+To change the mode, press the mode indicator on the touch screen to open a window to toggle the mode (USB/LSB) appropriate for your band.
 
 ![IC-7610 mode control](include/img/ic-7610-chg-mode.png)
 
