Further clean-up and removal of old reports.

--- a/src/narc1.qmd
+++ b/src/narc1.qmd
@@ -1,6 +1,10 @@
 ---
 title: "NARC-1"
-code-fold: true
+format: 
+  html:
+    code-fold: true
+    format-links: [pdf]
+  pdf: default
 ---
 
 ## Overview
