Fix bad filename/link with ic-7610.qmd.

--- a/src/narc1.qmd
+++ b/src/narc1.qmd
@@ -15,7 +15,7 @@ NARC-1 is the first HF station on your left as you enter the station.
 
 ### Equipment summary
 
-- [Icom IC-7610 (HF + 6m) transceiver](IC-7610.qmd)
+- [Icom IC-7610 (HF + 6m) transceiver](ic-7610.qmd)
     - Astron RS-35A power supply
 - Icom SM-50 desk mic
 - Clipper PTT footswitch
