--- a/logging.qmd
+++ b/logging.qmd
@@ -23,25 +23,18 @@ Here is some resources useful for getting this to work for Field Day
 
 <http://www.n3fjp.com/FDInfoTips.html>
 
-There are two types of networked logging, file share and TCP.
+There are two types of networked logging, file share and TCP, we use TCP in almost all circumstances.
+
+For Field Day 2024, we are using TCP.
+Here is a screenshot of the settings for NARC1:
+
+![NARC1 N3FJP Field Day Log network settings](include/img/narc1-n3fjp-networked-logging-params.png){#fig-narc1-n3fjp-networked-logging}
+
+In this setup, NARC1 is the log server; NARC2 is a client.
+
+![NARC2 N3FJP Field Day Log network settings](include/img/narc2-n3fjp-networked-logging-params.png)
 
 ::: {.callout-note}
-## Key points for networking N3FJP's Field Day log via "File Share"
-
-- Set up your network (you can Google "Set up home network" for all the information you need to get you going).
-
-- Put the LogData.mdb file in a folder that is accessible to all the PCs on the network. Tip - with later operating systems, groups often find it easier to attach and share an external hard drive or thumb drive to their server, than share their server's C drive.
-
-- Make sure the Field Day software is pointing to the correct log file by clicking File > Open, navigating to the file and selecting it.
-
-- Make sure that your Internet / Virus Protection software is allowing the program to communicate.
-
-- Enable permissions to Update (not just read) on the drive, folder and log data file.
-
-:::
-
-::: {.callout-note}
-
 ## Key points for networking N3FJP's Field Day log via TCP
 
 - First coded in July 2013, this option piggybacks on the functionality of the Status and Chat functions, to distribute adds, edits and deletes via TCP.
@@ -61,21 +54,46 @@ There are two types of networked logging, file share and TCP.
 - All PCs must select the same networking method. You can not mix and match! Either use File Share or TCP for every PC.
 
 - With the TCP method, more will be asked of the server, so processor timed sending of CW may be less precise.
-
 :::
-
-For Field Day 2024, we are using TCP.
-Here is a screenshot of the settings for NARC1:
-
-![NARC1 N3FJP Field Day Log network settings](include/img/narc1-n3fjp-networked-logging-params.png){#fig-narc1-n3fjp-networked-logging}
-
-In this setup, NARC1 is the log server; NARC2 is a client.
-
-![NARC2 N3FJP Field Day Log network settings](include/img/narc2-n3fjp-networked-logging-params.png)
 
 ### Digital mode logging
 
-Here is a resource for connecting N3FJP's software to various digital mode programs:
+To configure select Settings/Application Program Interface (API) from the AC Log menus.
+
+![AC Log API Window](include/img/narc1-aclog-api-settings-.png){#fig-narc1-aclog-api-settings}
+As @fig-narc1-aclog-api-settings indicates, click on **TCP API Enabled Server** checkbox and use the default port (1100).
+Under **WSTJ-X Interface** select **Listen for WSJT-X*
+
+#### WSTJ-X
+
+It's best to use separate configurations for each use case.
+Here, we will describe our W3YA-FD (Field Day) configuration.
+
+Under the WSJT-X File/Settings... menu there is a multi-tabbed window.
+Two windows are critical for Field Day logging with AC Log.
+
+![NARC1 W3YA-FD Reporting Tab Settings](include/img/narc1-wsjtx-w3yafd-settings-reporting.png){#fig-narc1-wsjtx-w3yafd-settings-reporting}
+
+![NARC1 W3YA-FD Reporting Tab Settings](include/img/narc1-wsjtx-w3yafd-settings-advanced.png){#fig-narc1-wsjtx-w3yafd-settings-advanced}
+
+With these settings, WSJT-X controls the radio (and the associated COM port), while N3FJP periodically polls the WSTJ-X log and incorporates the data.
+
+#### Fldigi
+
+NARC1 uses flrig for fldigi rig control.
+Here are some other settings relevant for Field Day logging.
+
+![fldigi configuration under Configure/Contests](include/img/narc1-fldigi-configure-contests.png){#fig-narc1-fldigi-configure-contests}
+
+![fldigi configuration under Configure/Logging/N3FJP Logs](include/img/narc1-fldigi-configure-logging.png){#fig-narc1-fldigi-configure-logging}
+
+**NOTE** The figure does *not* have PTT via <RIGTX> and <RIGRX> checked, but I think it should be.
+
+Also, please note that the "Connect" checkbox in the upper right is selected and the "Connected" indicator should be green.
+
+#### More information
+
+Here are more resources for connecting N3FJP's software to various digital mode programs:
 
 <http://www.n3fjp.com/help/digitalsetup.html>
 
