--- a/narc1.qmd
+++ b/narc1.qmd
@@ -3,8 +3,6 @@ title: "NARC-1"
 format: 
   html:
     code-fold: true
-    format-links: [pdf]
-  pdf: default
 ---
 
 ## Overview
@@ -111,4 +109,4 @@ narc1 |>
 
 ### Operating Guide
 
-The operating guide for the IC-7610 is [here](icom-ic-7610.qmd).
+The operating guide is found under [Rigs/IC-7610 section](ic-7610.qmd).
