--- a/narc1.qmd
+++ b/narc1.qmd
@@ -133,4 +133,4 @@ narc1 |>
 
 ### Operating Guide
 
-The operating guide is found under [Rigs/IC-7610 section](icom-ic-7610.qmd).
+The operating guide is found under [rigs/IC-7610 section](icom-ic-7610.qmd).
