Modify index.qmd: Add Field Day 2024.

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ Mark Wharton K0LO provides computer networking support.
 This site provides information about how to gain access to the mountaintop station and how to use the equipment.
 
 The mountaintop station has been a focal point of activity for the club.
-We operated Field Day 2023 from the station, and we have held W3M special event operations, Pennsylvania QSO Party activities, and other contesting events.
+We operated Field Day 2023 and 2024 from the station, and we have held W3M special event operations, Pennsylvania QSO Party activities, and other contesting events.
 
 For a PDF version of this guide, click [here](NARC-Clubhouse-Guide.pdf).
 
